Enhancing training styles: added responsive padding, improved text readability, and ensured image scaling for better mobile experience.

--- a/_sass/training.scss
+++ b/_sass/training.scss
@@ -6,11 +6,38 @@
   .introduction {
     display: flex;
     flex-direction: row;
-    margin: 4rem;
+    margin: 4rem 0;
     max-width: $max-page-width;
+    width: 100%;
 
     @media screen and (max-width: $max-width-breakpoint) {
       flex-direction: column-reverse;
+      margin: 2rem 0;
+      padding: 0 1rem;
+    }
+
+    .text {
+      padding-right: 2rem;
+
+      @media screen and (max-width: $max-width-breakpoint) {
+        padding-right: 0;
+      }
+
+      p {
+        line-height: 1.6;
+      }
+    }
+
+    .image {
+      display: flex;
+      justify-content: center;
+      align-items: flex-start;
+
+      img {
+        width: 100%;
+        max-width: 320px;
+        height: auto;
+      }
     }
 
     h1 {
@@ -18,6 +45,10 @@
       margin: 0;
       font-size: 3rem;
       font-weight: lighter;
+
+      @media screen and (max-width: $max-width-breakpoint) {
+        font-size: 2.25rem;
+      }
     }
   }
 
